# SageMaker-ECR-Training-Demo

docker/: Dockerfile  pyproject.toml
docker/code/: main.py
notebook/.ipynb_checkpoints/: offline_workflow-checkpoint.ipynb
results/: basic_training_log.csv
